kubernetes/bazarr/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bazarr
  labels:
    app: bazarr

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name: bazarr
        image: linuxserver/bazarr:1.6.0@sha256:84b6f05a7a4194fafe5a0bec062d32f6ae9ea74db33d43d678cb9a3191f31c24
        ports:
        - containerPort: 6767
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /tv
          name: tv
        - mountPath: /movies
          name: movies
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: bazarr-config
      - nfs:
          server: fs2.oneill.net
          path: /volume2/shared/video/tv
        name: tv
      - nfs:
          server: fs2.oneill.net
          path: /volume2/shared/video/movies
        name: movies
